[package]
name = "pccg"
version = "0.0.2"
description = "Generate an AI-ready prompt from staged git changes to create Conventional Commit messages"
license="GPL-3.0-or-later"
edition = "2024"
readme = "README.md"
repository = "https://github.com/J101R/pccg"

keywords = [
    "git",
    "conventional-commits",
    "ai",
    "prompts",
    "cli"
]

categories = [
    "command-line-utilities",
    "development-tools"
]

[[bin]]
name = "pccg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0",       default-features = false, features = ["help", "std", "derive"] }
anyhow = { version = "1.0.102",   default-features = false, features = ["std", "backtrace"] }
minijinja = { version = "2.18.0", default-features = false, features = ["serde"] }
serde = { version = "1.0.228",    default-features = false, features = [] }
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2",       default-features = false, features = ["user"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
